config-k8s/defRules/canaryRule-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-middle
spec:
  hosts:
    - middleware-svc
  http:
    - route:
        - destination:
            host: middleware-svc
            subset: canary
          weight: 20
        - destination:
            host: middleware-svc
            subset: prod
          weight: 80
