config-k8s/defRules/currentRule-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-front
spec:
  hosts:
    - usvc.algo.fit
  gateways:
    - front-gateway
  http:
    - route:
        - destination:
            host: rand-front-svc
            subset: prod
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-middle
spec:
  hosts:
    - middleware-svc
  http:
    - match:
        - headers:
            x-dev-user:
              exact: betaUser
      route:
        - destination:
            host: middleware-svc
            subset: dev
    - route:
        - destination:
            host: middleware-svc
            subset: canary
          weight: 20
        - destination:
            host: middleware-svc
            subset: prod
          weight: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-core
spec:
  hosts:
    - core-svc
  http:
    - match:
        - headers:
            x-dev-user:
              exact: stressTest
        - headers:
            x-dev-user:
              exact: betaUser
      route:
        - destination:
            host: core-svc
            subset: test
    - route:
        - destination:
            host: core-svc
            subset: prod
