config-k8s/defRules/devRule-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-middle
spec:
  hosts:
    - middleware-svc
  http:
    - route:
        - destination:
            host: middleware-svc
            subset: dev
