config-k8s/defRules/retryRule-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-front
spec:
  hosts:
    - usvc.algo.fit
  gateways:
    - front-gateway
  http:
    - route:
        - destination:
            host: rand-front-svc
            subset: prod
      retries:
        attempts: 4
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-middle
spec:
  hosts:
    - middleware-svc
  http:
    - route:
        - destination:
            host: middleware-svc
            subset: prod
      retries:
        attempts: 4
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-core
spec:
  hosts:
    - core-svc
  http:
    - route:
        - destination:
            host: core-svc
            subset: prod
      retries:
        attempts: 4
        perTryTimeout: 2s
