config-k8s/defRules/stressRule-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-core
spec:
  hosts:
    - core-svc
  http:
    - match:
        - headers:
            x-dev-user:
              exact: stressTest
      route:
        - destination:
            host: core-svc
            subset: test
    - route:
        - destination:
            host: core-svc
            subset: prod
